Added Loading State when we do Request

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,11 @@ dioxus = "*"
 
 
 dioxus-desktop = "*"
-reqwest = "*"
 tokio = { version = "*", features = ["full"] }
 serde = { version = "*", features = ["derive"] }
 serde_json = "*"
+serde_yaml = "*"
 futures = "*"
 my-json = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-json.git" }
+my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git" }
+flurl = { tag = "0.3.0", git = "https://github.com/MyJetTools/fl-url.git" }
