--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,9 @@ serde = { version = "*", features = ["derive"] }
 serde_json = "*"
 serde_yaml = "*"
 futures = "*"
-my-json = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-json.git" }
-my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git" }
-flurl = { tag = "0.4.0", git = "https://github.com/MyJetTools/fl-url.git" }
+my-json = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-json.git" }
+my-settings-reader = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-settings-reader.git" }
+flurl = { tag = "0.5.0-rc01", git = "https://github.com/MyJetTools/fl-url.git" }
 
 lazy_static = "*"
 
